# disco

./: BUILD.gn  README.md
dj/: pubspec.yaml
dj/example/: BUILD.gn  example.dart
dj/lib/: dj.dart
dj/lib/src/: allocator.dart  bindings.dart  buffer.dart  command.dart  command_buffer.dart  context.dart  pipeline.dart  pipeline_descriptor.dart  pipeline_library.dart  render_pass.dart  render_target.dart  sampler.dart  sampler_descriptor.dart  sampler_library.dart  shader.dart  shader_function.dart  shader_library.dart  surface.dart  texture.dart  texture_descriptor.dart
epoxy/: BUILD.gn  README.md
epoxy/source/: code_gen.cc  decls.h  driver.h
epoxy/source/grammar/: Makefile  epoxy.y  lexer.cc  lexer.h  location.hh  parser.cc  parser.h
epoxy/template/: cxx.template.epoxy  dart.template.epoxy  hdr.template.epoxy
examples/hello/: .metadata  BUILD.gn  pubspec.yaml
examples/hello/lib/: main.dart
runtime/: BUILD.gn  disco.cc  disco.epoxy  handle.cc  handle.h  runtime.cc  runtime.h  types.h
shell/: BUILD.gn  disco.cc  disco_playground.cc  disco_playground.h  shell.cc  shell.h  switches.cc  switches.h  window.cc  window.h
shell/platform/darwin/macos/: BUILD.gn  disco.cc
tools/: disco.gni
