# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../tools/impeller.gni")

config("disco_public_config") {
  include_dirs = [ "//flutter/impeller" ]
}

group("disco") {
  deps = []
  if (is_mac) {
    deps += [ "shell/platform/darwin/macos" ]
  } else {
    assert(false, "Disco does not support this platform yet.")
  }
}
