# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../tools/disco.gni")

epoxy_native("runtime_bindings") {
  source = "disco.epoxy"
}

disco_component("runtime_types") {
  sources = [ "types.h" ]

  deps = [ "//flutter/fml" ]
}

disco_component("runtime") {
  sources = [
    "runtime.cc",
    "runtime.h",
  ]

  deps = [
    ":runtime_bindings",
    ":runtime_types",
    "../../base",
    "//flutter/fml",
    "//flutter/shell/platform/embedder:embedder_as_internal_library",
  ]
}
