# Copyright 2013 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../../tools/disco.gni")

disco_component("macos") {
  target_type = "executable"

  output_name = "disco"

  sources = [ "disco.cc" ]

  deps = [
    "../../../../runtime",
    "//flutter/fml",
  ]
}
